<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueDark"
    tools:context=".ui.details.DetailsActivity"
    tools:ignore="Overdraw">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cd_btn_back"
            android:elevation="3dp"
            android:src="@drawable/ic_arrow_back_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_backdrop"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:contentDescription="@string/cd_movie_backdrop"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:contentDescription="@string/cd_movie_backdrop"
            android:src="@drawable/shape_rectangle_gradient_blue_transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:elevation="3dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_title_details">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="80dp"
                android:layout_height="120dp"
                android:contentDescription="@string/cd_movie_poster" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title_details"
            style="@style/TextContext.ExtraLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_backdrop"
            tools:text="Kimetsu no Yaiba" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TextContext.Large"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/rating"
            app:layout_constraintStart_toStartOf="@+id/tv_title_details"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_details" />

        <RatingBar
            android:id="@+id/rb_rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:numStars="5"
            android:rating="0"
            android:progressBackgroundTint="@color/white"
            android:progressTint="@color/redTheme"
            app:layout_constraintBottom_toBottomOf="@+id/tv_rating_details"
            app:layout_constraintStart_toEndOf="@+id/tv_rating_details"
            app:layout_constraintTop_toTopOf="@+id/tv_rating_details" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TextContext.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/synopsis"
            app:layout_constraintStart_toStartOf="@+id/tv_title_details"
            app:layout_constraintTop_toBottomOf="@+id/rb_rating" />

        <TextView
            android:id="@+id/tv_synopsis_details"
            style="@style/TextContext.Regular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:lineSpacingMultiplier="1.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:text="Lorem ipsum is color dolor si amet. Lorem ipsum is color dolor si amet. Lorem ipsum is color dolor si amet. Lorem ipsum is color dolor si amet.Lorem ipsum is color dolor si amet.Lorem ipsum is color dolor si amet " />

        <ProgressBar
            android:id="@+id/progressBar4"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_backdrop" />

        <TextView
            android:id="@+id/tv_rating_details"
            style="@style/TextContext.Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            tools:text="6.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:elevation="8dp"
        android:focusable="true"
        android:src="@drawable/ic_favorite_border_24dp"
        app:fabSize="normal"
        android:contentDescription="@string/cd_btn_fav" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>