<resources>
    <string name="app_name">Movie Submission</string>

    <!--  Fragment  -->
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">TV Shows</string>
    <string name="tab_text_3">Fav Movies</string>
    <string name="tab_text_4">Fav Tv Shows</string>

    <!--  Details   -->
    <string name="rating">Rating :</string>
    <string name="synopsis">Synopsis</string>

    <!--  ContentDescription  -->
    <string name="cd_movie_poster">Movie Poster</string>
    <string name="cd_movie_backdrop">Movie Backdrop</string>
    <string name="cd_logo">Logo Application</string>
    <string name="cd_btn_back">Button Back</string>
    <string name="cd_btn_fav">Favorite Button</string>


    <string name="movie_submission">Movie Submission</string>
    <string name="add_fav">Berhasil menambahkan ke favorite</string>
    <string name="favorite">Favorite</string>
    <string name="remove_fav">Berhasil menghapus dari favorite</string>

    <string name="message_undo">Item berhasil dihapus dari favorite</string>
    <string name="undo">Undo</string>
    <string name="cd_no_data_favorite">No Favorite Data</string>
    <string name="empty_fav_movie">Kamu tidak memiliki daftar Favorite Movie</string>
    <string name="empty_fav_tv_show">Kamu tidak memiliki daftar Favorite Tv Show</string>
</resources>
